--- a/index.html
+++ b/index.html
@@ -27,82 +27,96 @@
 <body class="min-h-screen text-gray-100 flex items-center justify-center p-6 relative font-sans">
     <div class="particles"></div>
 
-    <div class="w-full max-w-2xl relative z-10">
-        <div class="glass rounded-3xl p-10 shadow-2xl shadow-indigo-900/50 transition-all duration-500 hover:shadow-indigo-700/60">
-            <!-- Header -->
-            <div class="flex items-center justify-between mb-10">
-                <h1 class="text-4xl font-extrabold bg-gradient-to-r from-indigo-400 via-purple-400 to-pink-400 bg-clip-text text-transparent flex items-center gap-4">
-                    <i class="fas fa-wand-magic-sparkles text-4xl animate-pulse"></i>
+    <div class="w-full max-w-6xl relative z-10">
+        <!-- Grande card container -->
+        <div class="glass rounded-3xl p-8 md:p-12 shadow-2xl shadow-indigo-900/50 transition-all duration-500 hover:shadow-indigo-700/60">
+            
+            <!-- Titre global -->
+            <div class="text-center mb-10">
+                <h1 class="text-5xl font-extrabold bg-gradient-to-r from-indigo-400 via-purple-400 to-pink-400 bg-clip-text text-transparent flex items-center justify-center gap-4">
+                    <i class="fas fa-wand-magic-sparkles text-5xl animate-pulse"></i>
                     ProMail Express
                 </h1>
-                <span class="text-xs uppercase tracking-widest text-indigo-300 opacity-80">AI Multi-Models • Historique</span>
+                <p class="mt-3 text-indigo-300 opacity-90">AI Multi-Models • Historique • Tutoiement respecté</p>
             </div>
 
-            <!-- Sélecteur de modèle -->
-            <div class="mb-8">
-                <label class="block text-sm font-medium text-indigo-300 mb-3">Choisis ton modèle IA</label>
-                <select id="modelSelect" class="w-full px-6 py-5 bg-gray-900/40 border border-indigo-500/30 rounded-2xl text-white focus:outline-none focus:border-indigo-400 focus:ring-2 focus:ring-indigo-500/50 transition-all glass">
-                    <option value="Qwen/Qwen2.5-7B-Instruct">Qwen2.5-7B-Instruct (Équilibré, excellent FR)</option>
-                    <option value="HuggingFaceTB/SmolLM3-3B">SmolLM3-3B (Ultra-rapide)</option>
-                    <option value="meta-llama/Llama-3.2-3B-Instruct">Llama-3.2-3B-Instruct (Fiable & léger)</option>
-                    <option value="meta-llama/Meta-Llama-3-8B-Instruct">Llama-3-8B-Instruct (Premium classique)</option>
-                </select>
-            </div>
+            <!-- Conteneur flex pour les deux cards -->
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 lg:gap-12">
+                
+                <!-- Card GAUCHE : Historique -->
+                <div class="glass rounded-2xl p-8 order-2 lg:order-1 flex flex-col">
+                    <div class="flex justify-between items-center mb-6">
+                        <h3 class="text-2xl font-bold text-indigo-300">Historique</h3>
+                        <button onclick="clearHistory()" class="text-sm text-red-400 hover:text-red-300 transition flex items-center gap-2">
+                            <i class="fas fa-trash-alt"></i> Effacer tout
+                        </button>
+                    </div>
+                    <div id="historyList" class="flex-1 overflow-y-auto space-y-4 pr-2 max-h-[60vh] lg:max-h-[70vh]">
+                        <!-- Historique items ici -->
+                    </div>
+                    <p class="mt-4 text-sm text-center text-indigo-400/70">Clique sur une entrée pour revoir le résultat</p>
+                </div>
 
-            <!-- Toggle forcer tutoiement -->
-            <div class="mb-8 flex items-center justify-between">
-                <label class="text-sm font-medium text-indigo-300">Forcer le tutoiement (toujours "tu")</label>
-                <label class="relative inline-flex items-center cursor-pointer">
-                    <input type="checkbox" id="forceTu" class="sr-only peer">
-                    <div class="w-14 h-7 bg-gray-700 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-indigo-800 rounded-full peer peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:left-[4px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-6 after:w-6 after:transition-all peer-checked:bg-indigo-600"></div>
-                </label>
-            </div>
+                <!-- Card DROITE : Formulaire principal -->
+                <div class="glass rounded-2xl p-8 order-1 lg:order-2">
+                    <!-- Sélecteur modèle -->
+                    <div class="mb-8">
+                        <label class="block text-sm font-medium text-indigo-300 mb-3">Modèle IA</label>
+                        <select id="modelSelect" class="w-full px-6 py-5 bg-gray-900/40 border border-indigo-500/30 rounded-2xl text-white focus:outline-none focus:border-indigo-400 focus:ring-2 focus:ring-indigo-500/50 transition-all glass">
+                            <option value="Qwen/Qwen2.5-7B-Instruct">Qwen2.5-7B-Instruct (Équilibré, excellent FR)</option>
+                            <option value="HuggingFaceTB/SmolLM3-3B">SmolLM3-3B (Ultra-rapide)</option>
+                            <option value="meta-llama/Llama-3.2-3B-Instruct">Llama-3.2-3B-Instruct (Fiable & léger)</option>
+                            <option value="meta-llama/Meta-Llama-3-8B-Instruct">Llama-3-8B-Instruct (Premium classique)</option>
+                        </select>
+                    </div>
 
-            <!-- Input clé -->
-            <div class="mb-8">
-                <label class="block text-sm font-medium text-indigo-300 mb-3">Hugging Face Token (Inference Providers)</label>
-                <div class="relative">
-                    <input type="password" id="tk" placeholder="hf_..." class="w-full px-6 py-5 bg-gray-900/40 border border-indigo-500/30 rounded-2xl text-white placeholder-gray-500 focus:outline-none focus:border-indigo-400 focus:ring-2 focus:ring-indigo-500/50 transition-all glass" onchange="saveToken()">
-                    <i class="fas fa-key absolute right-5 top-1/2 -translate-y-1/2 text-indigo-400"></i>
+                    <!-- Toggle forcer tutoiement -->
+                    <div class="mb-8 flex items-center justify-between">
+                        <label class="text-sm font-medium text-indigo-300">Forcer tutoiement (toujours "tu")</label>
+                        <label class="relative inline-flex items-center cursor-pointer">
+                            <input type="checkbox" id="forceTu" class="sr-only peer">
+                            <div class="w-14 h-7 bg-gray-700 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-indigo-800 rounded-full peer peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:left-[4px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-6 after:w-6 after:transition-all peer-checked:bg-indigo-600"></div>
+                        </label>
+                    </div>
+
+                    <!-- Clé API -->
+                    <div class="mb-8">
+                        <label class="block text-sm font-medium text-indigo-300 mb-3">Token Hugging Face</label>
+                        <div class="relative">
+                            <input type="password" id="tk" placeholder="hf_..." class="w-full px-6 py-5 bg-gray-900/40 border border-indigo-500/30 rounded-2xl text-white placeholder-gray-500 focus:outline-none focus:border-indigo-400 focus:ring-2 focus:ring-indigo-500/50 transition-all glass" onchange="saveToken()">
+                            <i class="fas fa-key absolute right-5 top-1/2 -translate-y-1/2 text-indigo-400"></i>
+                        </div>
+                    </div>
+
+                    <!-- Message -->
+                    <div class="mb-10">
+                        <label class="block text-sm font-medium text-indigo-300 mb-3">Ton message</label>
+                        <textarea id="msg" rows="6" placeholder="Ex: Yo mec, envoie le rapport demain stp ça urge..." class="w-full px-6 py-5 bg-gray-900/40 border border-indigo-500/30 rounded-2xl text-white placeholder-gray-500 focus:outline-none focus:border-indigo-400 focus:ring-2 focus:ring-indigo-500/50 transition-all resize-none glass"></textarea>
+                    </div>
+
+                    <!-- Bouton -->
+                    <button onclick="send()" class="w-full py-6 bg-gradient-to-r from-indigo-600 via-purple-600 to-pink-600 hover:from-indigo-700 hover:via-purple-700 hover:to-pink-700 text-white font-bold text-xl rounded-2xl shadow-2xl shadow-purple-900/50 hover:shadow-purple-700/70 transform hover:scale-105 transition-all duration-300 flex items-center justify-center gap-4 glow-hover">
+                        <i class="fas fa-magic text-2xl"></i> TRANSFORMER
+                    </button>
+
+                    <!-- Loader -->
+                    <div id="lod" class="hidden mt-8 text-center text-indigo-400 font-medium flex items-center justify-center gap-3 animate-pulse">
+                        <i class="fas fa-brain text-2xl animate-spin"></i> En cours...
+                    </div>
+
+                    <!-- Résultat -->
+                    <div id="res" class="hidden mt-10 p-8 glass rounded-2xl border-indigo-500/40 fade-in-up relative">
+                        <button id="copyBtn" class="absolute top-4 right-4 text-indigo-300 hover:text-white transition-colors text-xl" title="Copier">
+                            <i class="fas fa-copy"></i>
+                        </button>
+                        <div id="resultText" class="text-lg leading-relaxed text-gray-200 whitespace-pre-wrap"></div>
+                    </div>
                 </div>
             </div>
 
-            <!-- Textarea -->
-            <div class="mb-10">
-                <label class="block text-sm font-medium text-indigo-300 mb-3">Message à transformer</label>
-                <textarea id="msg" rows="6" placeholder="Ex: Yo mec, envoie le rapport demain stp ça urge..." class="w-full px-6 py-5 bg-gray-900/40 border border-indigo-500/30 rounded-2xl text-white placeholder-gray-500 focus:outline-none focus:border-indigo-400 focus:ring-2 focus:ring-indigo-500/50 transition-all resize-none glass"></textarea>
-            </div>
-
-            <!-- Bouton -->
-            <button onclick="send()" class="w-full py-6 bg-gradient-to-r from-indigo-600 via-purple-600 to-pink-600 hover:from-indigo-700 hover:via-purple-700 hover:to-pink-700 text-white font-bold text-xl rounded-2xl shadow-2xl shadow-purple-900/50 hover:shadow-purple-700/70 transform hover:scale-105 transition-all duration-300 flex items-center justify-center gap-4 glow-hover">
-                <i class="fas fa-magic text-2xl"></i> TRANSFORMER
-            </button>
-
-            <!-- Loader -->
-            <div id="lod" class="hidden mt-8 text-center text-indigo-400 font-medium flex items-center justify-center gap-3 animate-pulse">
-                <i class="fas fa-brain text-2xl animate-spin"></i> Transformation en cours...
-            </div>
-
-            <!-- Résultat -->
-            <div id="res" class="hidden mt-10 p-8 glass rounded-2xl border-indigo-500/40 fade-in-up relative">
-                <button id="copyBtn" class="absolute top-4 right-4 text-indigo-300 hover:text-white transition-colors text-xl" title="Copier">
-                    <i class="fas fa-copy"></i>
-                </button>
-                <div id="resultText" class="text-lg leading-relaxed text-gray-200 whitespace-pre-wrap"></div>
-            </div>
-
-            <!-- Historique -->
-            <div class="mt-12">
-                <div class="flex justify-between items-center mb-4">
-                    <h3 class="text-xl font-bold text-indigo-300">Historique des transformations</h3>
-                    <button onclick="clearHistory()" class="text-sm text-red-400 hover:text-red-300 transition">Effacer tout</button>
-                </div>
-                <div id="historyList" class="max-h-80 overflow-y-auto space-y-4 pr-2"></div>
-            </div>
-
-            <!-- Footer -->
-            <p class="mt-10 text-center text-sm text-indigo-300/70">
-                Powered by Hugging Face Inference • Tous modèles open-source & gratuits
+            <!-- Footer global -->
+            <p class="mt-12 text-center text-sm text-indigo-300/70">
+                Powered by Hugging Face Inference Providers • Modèles open-source • 2026 vibes
             </p>
         </div>
     </div>
@@ -120,7 +134,11 @@
         function renderHistory() {
             const list = document.getElementById('historyList');
             list.innerHTML = '';
-            history.forEach((item, idx) => {
+            if (history.length === 0) {
+                list.innerHTML = '<p class="text-center text-indigo-400/70 py-10">Aucune transformation pour l\'instant...</p>';
+                return;
+            }
+            history.forEach((item) => {
                 const div = document.createElement('div');
                 div.className = 'p-5 glass rounded-xl cursor-pointer hover:bg-indigo-900/30 transition group';
                 div.innerHTML = `
@@ -128,13 +146,13 @@
                         <span>${item.model.split('/').pop()}</span>
                         <span>${new Date(item.date).toLocaleString('fr-FR', {hour: '2-digit', minute:'2-digit'})}</span>
                     </div>
-                    <div class="text-gray-300 mb-2 line-clamp-3">${item.original.substring(0,120)}${item.original.length > 120 ? '...' : ''}</div>
-                    <div class="text-white font-medium">${item.result.substring(0,150)}${item.result.length > 150 ? '...' : ''}</div>
+                    <div class="text-gray-300 mb-2 line-clamp-3">${item.original.substring(0,100)}${item.original.length > 100 ? '...' : ''}</div>
+                    <div class="text-white font-medium line-clamp-3">${item.result.substring(0,120)}${item.result.length > 120 ? '...' : ''}</div>
                 `;
                 div.onclick = () => {
                     document.getElementById('resultText').innerText = item.result;
                     document.getElementById('res').classList.remove('hidden');
-                    window.scrollTo({top: document.body.scrollHeight, behavior: 'smooth'});
+                    document.getElementById('res').scrollIntoView({ behavior: 'smooth' });
                 };
                 list.appendChild(div);
             });
@@ -143,20 +161,20 @@
 
         function addToHistory(original, result, model) {
             history.unshift({ original, result, model, date: Date.now() });
-            if (history.length > 20) history.pop();
+            if (history.length > 30) history.pop();
             localStorage.setItem('promail_history', JSON.stringify(history));
             renderHistory();
         }
 
         function clearHistory() {
-            if (confirm("Vraiment effacer tout l'historique ?")) {
+            if (confirm("Effacer tout l'historique ?")) {
                 history = [];
                 localStorage.removeItem('promail_history');
                 renderHistory();
             }
         }
 
-        // Fonction principale de transformation
+        // Send function
         async function send() {
             const token = document.getElementById('tk').value.trim();
             const msg = document.getElementById('msg').value.trim();
@@ -174,7 +192,6 @@
             loader.classList.remove('hidden');
             res.classList.add('hidden');
 
-            // Choix du prompt système selon le toggle
             const systemPrompt = forceTu ?
                 `Tu es un assistant qui reformule des messages en français professionnel, poli et concis (style email pro).
 Toujours utiliser le tutoiement ("tu", "toi", "ton", "ta", etc.), même si le message original est formel ou utilise "vous". Sois naturel, élégant et sympa.` :
@@ -203,10 +220,7 @@ Ne passe JAMAIS au vouvoiement si l'original est en "tu".`;
                     })
                 });
 
-                if (!resp.ok) {
-                    const err = await resp.json().catch(() => ({}));
-                    throw new Error(err.error?.message || `Erreur HTTP ${resp.status}`);
-                }
+                if (!resp.ok) throw new Error((await resp.json()).error?.message || "Erreur API");
 
                 const data = await resp.json();
                 const text = data.choices[0].message.content.trim();
@@ -217,19 +231,16 @@ Ne passe JAMAIS au vouvoiement si l'original est en "tu".`;
                 addToHistory(msg, text, model);
 
             } catch (e) {
-                alert("Erreur : " + e.message + "\nVérifie ton token, le modèle choisi ou ton quota Hugging Face.");
+                alert("Erreur : " + e.message + "\nVérifie token/modèle/quota !");
                 console.error(e);
             } finally {
                 loader.classList.add('hidden');
             }
         }
 
-        // Copie du résultat
         document.getElementById('copyBtn').onclick = () => {
             const txt = document.getElementById('resultText').innerText;
-            navigator.clipboard.writeText(txt).then(() => {
-                alert("Copié dans le presse-papiers !");
-            }).catch(() => alert("Erreur lors de la copie."));
+            navigator.clipboard.writeText(txt).then(() => alert("Copié !")).catch(() => alert("Erreur copie."));
         };
     </script>
 </body>
