--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body class="min-h-screen text-gray-100 flex items-center justify-center p-6 relative font-sans">
     <div class="particles"></div>
 
-    <div class="w-full max-w-6xl relative z-10">
+    <div class="w-full max-w-7xl relative z-10">
         <!-- Grande card container -->
         <div class="glass rounded-3xl p-8 md:p-12 shadow-2xl shadow-indigo-900/50 transition-all duration-500 hover:shadow-indigo-700/60">
             
@@ -37,29 +37,29 @@
                     <i class="fas fa-wand-magic-sparkles text-5xl animate-pulse"></i>
                     ProMail Express
                 </h1>
-                <p class="mt-3 text-indigo-300 opacity-90">AI Multi-Models • Historique • Tutoiement respecté</p>
+                <p class="mt-3 text-indigo-300 opacity-90">AI Multi-Models • Historique • Résultat dédié</p>
             </div>
 
-            <!-- Conteneur flex pour les deux cards -->
-            <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 lg:gap-12">
+            <!-- Conteneur grid pour les 3 cards -->
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 lg:gap-10">
                 
-                <!-- Card GAUCHE : Historique -->
-                <div class="glass rounded-2xl p-8 order-2 lg:order-1 flex flex-col">
+                <!-- Card 1 - GAUCHE : Historique -->
+                <div class="glass rounded-2xl p-8 flex flex-col order-3 lg:order-1">
                     <div class="flex justify-between items-center mb-6">
                         <h3 class="text-2xl font-bold text-indigo-300">Historique</h3>
                         <button onclick="clearHistory()" class="text-sm text-red-400 hover:text-red-300 transition flex items-center gap-2">
-                            <i class="fas fa-trash-alt"></i> Effacer tout
+                            <i class="fas fa-trash-alt"></i> Effacer
                         </button>
                     </div>
-                    <div id="historyList" class="flex-1 overflow-y-auto space-y-4 pr-2 max-h-[60vh] lg:max-h-[70vh]">
-                        <!-- Historique items ici -->
+                    <div id="historyList" class="flex-1 overflow-y-auto space-y-4 pr-2 max-h-[50vh] lg:max-h-[70vh]">
+                        <!-- Historique items -->
                     </div>
-                    <p class="mt-4 text-sm text-center text-indigo-400/70">Clique sur une entrée pour revoir le résultat</p>
+                    <p class="mt-4 text-sm text-center text-indigo-400/70">Clique pour revoir</p>
                 </div>
 
-                <!-- Card DROITE : Formulaire principal -->
+                <!-- Card 2 - CENTRALE : Formulaire principal -->
                 <div class="glass rounded-2xl p-8 order-1 lg:order-2">
-                    <!-- Sélecteur modèle -->
+                    <!-- Modèle -->
                     <div class="mb-8">
                         <label class="block text-sm font-medium text-indigo-300 mb-3">Modèle IA</label>
                         <select id="modelSelect" class="w-full px-6 py-5 bg-gray-900/40 border border-indigo-500/30 rounded-2xl text-white focus:outline-none focus:border-indigo-400 focus:ring-2 focus:ring-indigo-500/50 transition-all glass">
@@ -70,16 +70,16 @@
                         </select>
                     </div>
 
-                    <!-- Toggle forcer tutoiement -->
+                    <!-- Toggle tutoiement -->
                     <div class="mb-8 flex items-center justify-between">
-                        <label class="text-sm font-medium text-indigo-300">Forcer tutoiement (toujours "tu")</label>
+                        <label class="text-sm font-medium text-indigo-300">Forcer tutoiement ("tu")</label>
                         <label class="relative inline-flex items-center cursor-pointer">
                             <input type="checkbox" id="forceTu" class="sr-only peer">
                             <div class="w-14 h-7 bg-gray-700 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-indigo-800 rounded-full peer peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:left-[4px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-6 after:w-6 after:transition-all peer-checked:bg-indigo-600"></div>
                         </label>
                     </div>
 
-                    <!-- Clé API -->
+                    <!-- Token -->
                     <div class="mb-8">
                         <label class="block text-sm font-medium text-indigo-300 mb-3">Token Hugging Face</label>
                         <div class="relative">
@@ -90,8 +90,8 @@
 
                     <!-- Message -->
                     <div class="mb-10">
-                        <label class="block text-sm font-medium text-indigo-300 mb-3">Ton message</label>
-                        <textarea id="msg" rows="6" placeholder="Ex: Yo mec, envoie le rapport demain stp ça urge..." class="w-full px-6 py-5 bg-gray-900/40 border border-indigo-500/30 rounded-2xl text-white placeholder-gray-500 focus:outline-none focus:border-indigo-400 focus:ring-2 focus:ring-indigo-500/50 transition-all resize-none glass"></textarea>
+                        <label class="block text-sm font-medium text-indigo-300 mb-3">Message à transformer</label>
+                        <textarea id="msg" rows="7" placeholder="Ex: Yo mec, envoie le rapport demain stp ça urge..." class="w-full px-6 py-5 bg-gray-900/40 border border-indigo-500/30 rounded-2xl text-white placeholder-gray-500 focus:outline-none focus:border-indigo-400 focus:ring-2 focus:ring-indigo-500/50 transition-all resize-none glass"></textarea>
                     </div>
 
                     <!-- Bouton -->
@@ -101,28 +101,36 @@
 
                     <!-- Loader -->
                     <div id="lod" class="hidden mt-8 text-center text-indigo-400 font-medium flex items-center justify-center gap-3 animate-pulse">
-                        <i class="fas fa-brain text-2xl animate-spin"></i> En cours...
+                        <i class="fas fa-brain text-2xl animate-spin"></i> Transformation...
                     </div>
+                </div>
 
-                    <!-- Résultat -->
-                    <div id="res" class="hidden mt-10 p-8 glass rounded-2xl border-indigo-500/40 fade-in-up relative">
-                        <button id="copyBtn" class="absolute top-4 right-4 text-indigo-300 hover:text-white transition-colors text-xl" title="Copier">
-                            <i class="fas fa-copy"></i>
-                        </button>
-                        <div id="resultText" class="text-lg leading-relaxed text-gray-200 whitespace-pre-wrap"></div>
+                <!-- Card 3 - DROITE : Résultat -->
+                <div class="glass rounded-2xl p-8 flex flex-col order-2 lg:order-3">
+                    <h3 class="text-2xl font-bold text-indigo-300 mb-6 text-center">Résultat</h3>
+                    <div id="res" class="flex-1 p-6 glass rounded-xl border-indigo-500/40 relative min-h-[300px] flex items-center justify-center">
+                        <div id="resultPlaceholder" class="text-center text-indigo-400/70">
+                            Le résultat apparaîtra ici après transformation
+                        </div>
+                        <div id="resultContent" class="hidden w-full h-full relative">
+                            <button id="copyBtn" class="absolute top-4 right-4 text-indigo-300 hover:text-white transition-colors text-xl" title="Copier">
+                                <i class="fas fa-copy"></i>
+                            </button>
+                            <div id="resultText" class="text-lg leading-relaxed text-gray-200 whitespace-pre-wrap"></div>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Footer global -->
+            <!-- Footer -->
             <p class="mt-12 text-center text-sm text-indigo-300/70">
-                Powered by Hugging Face Inference Providers • Modèles open-source • 2026 vibes
+                Powered by Hugging Face Inference • Modèles open-source • Respect du tutoiement
             </p>
         </div>
     </div>
 
     <script>
-        // Sauvegarde token
+        // Token save
         function saveToken() {
             const tk = document.getElementById('tk').value.trim();
             if (tk) localStorage.setItem('saved_tk', tk);
@@ -151,7 +159,8 @@
                 `;
                 div.onclick = () => {
                     document.getElementById('resultText').innerText = item.result;
-                    document.getElementById('res').classList.remove('hidden');
+                    document.getElementById('resultPlaceholder').classList.add('hidden');
+                    document.getElementById('resultContent').classList.remove('hidden');
                     document.getElementById('res').scrollIntoView({ behavior: 'smooth' });
                 };
                 list.appendChild(div);
@@ -174,14 +183,15 @@
             }
         }
 
-        // Send function
+        // Transformation
         async function send() {
             const token = document.getElementById('tk').value.trim();
             const msg = document.getElementById('msg').value.trim();
             const model = document.getElementById('modelSelect').value;
             const forceTu = document.getElementById('forceTu').checked;
             const loader = document.getElementById('lod');
-            const res = document.getElementById('res');
+            const resultPlaceholder = document.getElementById('resultPlaceholder');
+            const resultContent = document.getElementById('resultContent');
             const resultText = document.getElementById('resultText');
 
             if (!token || !msg) {
@@ -190,17 +200,17 @@
             }
 
             loader.classList.remove('hidden');
-            res.classList.add('hidden');
+            resultContent.classList.add('hidden');
+            resultPlaceholder.classList.remove('hidden');
 
             const systemPrompt = forceTu ?
                 `Tu es un assistant qui reformule des messages en français professionnel, poli et concis (style email pro).
 Toujours utiliser le tutoiement ("tu", "toi", "ton", "ta", etc.), même si le message original est formel ou utilise "vous". Sois naturel, élégant et sympa.` :
                 `Tu es un assistant qui reformule des messages en français professionnel, poli et concis (style email pro).
 Respecte scrupuleusement le niveau de familiarité de l'original :
-- Si l'original utilise "tu" ou un ton amical/informel → garde absolument le tutoiement ("tu", "toi", etc.).
-- Si l'original utilise "vous" ou un ton formel → utilise le vouvoiement ("vous", "votre", etc.).
-- Si neutre ou ambigu → préfère le tutoiement léger et sympa.
-Ne passe JAMAIS au vouvoiement si l'original est en "tu".`;
+- Si l'original utilise "tu" ou un ton amical/informel → garde absolument le tutoiement.
+- Si l'original utilise "vous" ou un ton formel → utilise le vouvoiement.
+- Si neutre ou ambigu → préfère le tutoiement léger et sympa.`;
 
             try {
                 const resp = await fetch("https://router.huggingface.co/v1/chat/completions", {
@@ -226,18 +236,20 @@ Ne passe JAMAIS au vouvoiement si l'original est en "tu".`;
                 const text = data.choices[0].message.content.trim();
 
                 resultText.innerText = text;
-                res.classList.remove('hidden');
+                resultPlaceholder.classList.add('hidden');
+                resultContent.classList.remove('hidden');
 
                 addToHistory(msg, text, model);
 
             } catch (e) {
-                alert("Erreur : " + e.message + "\nVérifie token/modèle/quota !");
+                alert("Erreur : " + e.message);
                 console.error(e);
             } finally {
                 loader.classList.add('hidden');
             }
         }
 
+        // Copy
         document.getElementById('copyBtn').onclick = () => {
             const txt = document.getElementById('resultText').innerText;
             navigator.clipboard.writeText(txt).then(() => alert("Copié !")).catch(() => alert("Erreur copie."));
