--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
     <div class="particles"></div>
 
     <div class="w-full max-w-7xl relative z-10">
-        <!-- Grande card container -->
         <div class="glass rounded-3xl p-8 md:p-12 shadow-2xl shadow-indigo-900/50 transition-all duration-500 hover:shadow-indigo-700/60">
             
-            <!-- Titre global -->
             <div class="text-center mb-10">
                 <h1 class="text-5xl font-extrabold bg-gradient-to-r from-indigo-400 via-purple-400 to-pink-400 bg-clip-text text-transparent flex items-center justify-center gap-4">
                     <i class="fas fa-wand-magic-sparkles text-5xl animate-pulse"></i>
@@ -40,10 +38,9 @@
                 <p class="mt-3 text-indigo-300 opacity-90">AI Multi-Models • Historique • Résultat dédié</p>
             </div>
 
-            <!-- Conteneur grid pour les 3 cards -->
             <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 lg:gap-10">
                 
-                <!-- Card 1 - GAUCHE : Historique -->
+                <!-- Historique (gauche) -->
                 <div class="glass rounded-2xl p-8 flex flex-col order-3 lg:order-1">
                     <div class="flex justify-between items-center mb-6">
                         <h3 class="text-2xl font-bold text-indigo-300">Historique</h3>
@@ -51,15 +48,18 @@
                             <i class="fas fa-trash-alt"></i> Effacer
                         </button>
                     </div>
-                    <div id="historyList" class="flex-1 overflow-y-auto space-y-4 pr-2 max-h-[50vh] lg:max-h-[70vh]">
-                        <!-- Historique items -->
-                    </div>
+                    <div id="historyList" class="flex-1 overflow-y-auto space-y-4 pr-2 max-h-[50vh] lg:max-h-[70vh]"></div>
                     <p class="mt-4 text-sm text-center text-indigo-400/70">Clique pour revoir</p>
                 </div>
 
-                <!-- Card 2 - CENTRALE : Formulaire principal -->
-                <div class="glass rounded-2xl p-8 order-1 lg:order-2">
-                    <!-- Modèle -->
+                <!-- Formulaire principal (centre) -->
+                <div class="glass rounded-2xl p-8 order-1 lg:order-2 relative">
+                    <!-- Bouton changer token (visible seulement quand token déjà enregistré) -->
+                    <button id="changeTokenBtn" class="absolute top-4 right-4 text-indigo-400 hover:text-indigo-300 text-sm flex items-center gap-2 hidden" onclick="showTokenField()">
+                        <i class="fas fa-key"></i> Changer token
+                    </button>
+
+                    <!-- Sélecteur modèle -->
                     <div class="mb-8">
                         <label class="block text-sm font-medium text-indigo-300 mb-3">Modèle IA</label>
                         <select id="modelSelect" class="w-full px-6 py-5 bg-gray-900/40 border border-indigo-500/30 rounded-2xl text-white focus:outline-none focus:border-indigo-400 focus:ring-2 focus:ring-indigo-500/50 transition-all glass">
@@ -79,8 +79,8 @@
                         </label>
                     </div>
 
-                    <!-- Token -->
-                    <div class="mb-8">
+                    <!-- Bloc Token (caché après première utilisation) -->
+                    <div id="tokenSection" class="mb-8">
                         <label class="block text-sm font-medium text-indigo-300 mb-3">Token Hugging Face</label>
                         <div class="relative">
                             <input type="password" id="tk" placeholder="hf_..." class="w-full px-6 py-5 bg-gray-900/40 border border-indigo-500/30 rounded-2xl text-white placeholder-gray-500 focus:outline-none focus:border-indigo-400 focus:ring-2 focus:ring-indigo-500/50 transition-all glass" onchange="saveToken()">
@@ -94,7 +94,7 @@
                         <textarea id="msg" rows="7" placeholder="Ex: Yo mec, envoie le rapport demain stp ça urge..." class="w-full px-6 py-5 bg-gray-900/40 border border-indigo-500/30 rounded-2xl text-white placeholder-gray-500 focus:outline-none focus:border-indigo-400 focus:ring-2 focus:ring-indigo-500/50 transition-all resize-none glass"></textarea>
                     </div>
 
-                    <!-- Bouton -->
+                    <!-- Bouton Transformer -->
                     <button onclick="send()" class="w-full py-6 bg-gradient-to-r from-indigo-600 via-purple-600 to-pink-600 hover:from-indigo-700 hover:via-purple-700 hover:to-pink-700 text-white font-bold text-xl rounded-2xl shadow-2xl shadow-purple-900/50 hover:shadow-purple-700/70 transform hover:scale-105 transition-all duration-300 flex items-center justify-center gap-4 glow-hover">
                         <i class="fas fa-magic text-2xl"></i> TRANSFORMER
                     </button>
@@ -105,7 +105,7 @@
                     </div>
                 </div>
 
-                <!-- Card 3 - DROITE : Résultat -->
+                <!-- Résultat (droite) -->
                 <div class="glass rounded-2xl p-8 flex flex-col order-2 lg:order-3">
                     <h3 class="text-2xl font-bold text-indigo-300 mb-6 text-center">Résultat</h3>
                     <div id="res" class="flex-1 p-6 glass rounded-xl border-indigo-500/40 relative min-h-[300px] flex items-center justify-center">
@@ -122,7 +122,6 @@
                 </div>
             </div>
 
-            <!-- Footer -->
             <p class="mt-12 text-center text-sm text-indigo-300/70">
                 Powered by Hugging Face Inference • Modèles open-source • Respect du tutoiement
             </p>
@@ -130,14 +129,40 @@
     </div>
 
     <script>
-        // Token save
-        function saveToken() {
-            const tk = document.getElementById('tk').value.trim();
-            if (tk) localStorage.setItem('saved_tk', tk);
-        }
-        document.getElementById('tk').value = localStorage.getItem('saved_tk') || '';
+        // Gestion du token
+        const tokenSection = document.getElementById('tokenSection');
+        const changeTokenBtn = document.getElementById('changeTokenBtn');
+        const tkInput = document.getElementById('tk');
 
-        // Historique
+        // Charger token sauvegardé
+        const savedToken = localStorage.getItem('saved_tk') || '';
+        tkInput.value = savedToken;
+
+        // Cacher le champ token si déjà enregistré
+        if (savedToken) {
+            tokenSection.classList.add('hidden');
+            changeTokenBtn.classList.remove('hidden');
+        }
+
+        // Afficher le champ pour changer le token
+        function showTokenField() {
+            tokenSection.classList.remove('hidden');
+            changeTokenBtn.classList.add('hidden');
+            tkInput.focus();
+        }
+
+        // Sauvegarde token (appelée au changement ou au premier send)
+        function saveToken() {
+            const tk = tkInput.value.trim();
+            if (tk) {
+                localStorage.setItem('saved_tk', tk);
+                // Une fois sauvegardé, on cache le champ
+                tokenSection.classList.add('hidden');
+                changeTokenBtn.classList.remove('hidden');
+            }
+        }
+
+        // Historique (inchangé)
         let history = JSON.parse(localStorage.getItem('promail_history')) || [];
         function renderHistory() {
             const list = document.getElementById('historyList');
@@ -185,7 +210,13 @@
 
         // Transformation
         async function send() {
-            const token = document.getElementById('tk').value.trim();
+            let token = tkInput.value.trim();
+
+            // Si pas de token saisi mais un est déjà sauvegardé → utiliser le sauvegardé
+            if (!token && localStorage.getItem('saved_tk')) {
+                token = localStorage.getItem('saved_tk');
+            }
+
             const msg = document.getElementById('msg').value.trim();
             const model = document.getElementById('modelSelect').value;
             const forceTu = document.getElementById('forceTu').checked;
@@ -197,6 +228,13 @@
             if (!token || !msg) {
                 alert("Token + message obligatoires !");
                 return;
+            }
+
+            // Sauvegarde automatique du token au premier envoi réussi
+            if (!localStorage.getItem('saved_tk') && token) {
+                localStorage.setItem('saved_tk', token);
+                tokenSection.classList.add('hidden');
+                changeTokenBtn.classList.remove('hidden');
             }
 
             loader.classList.remove('hidden');
@@ -242,14 +280,13 @@ Respecte scrupuleusement le niveau de familiarité de l'original :
                 addToHistory(msg, text, model);
 
             } catch (e) {
-                alert("Erreur : " + e.message);
+                alert("Erreur : " + e.message + "\nVérifie que le token est correct.");
                 console.error(e);
             } finally {
                 loader.classList.add('hidden');
             }
         }
 
-        // Copy
         document.getElementById('copyBtn').onclick = () => {
             const txt = document.getElementById('resultText').innerText;
             navigator.clipboard.writeText(txt).then(() => alert("Copié !")).catch(() => alert("Erreur copie."));
